[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "laser_tools_MATTBAIN_LCLS"
version = "0.0.1"
authors = [
  { name="Matt Bain", email="mattbain@slac.stanford.edu" },
]
description = "A small example package for propagating laser pulses"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GNU GENERAL PUBLIC LICENSE"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"